# Attention-Is-All-You-Need

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
report/: report.md
results/: raw_runs.csv
results/analysis/: key_findings.md  summary_by_config.csv  summary_by_config.md  summary_table_report.csv
slides/: outline.md
src/tiny_transformer/: __init__.py  analysis.py  data.py  demo.py  evaluate.py  models.py  train.py
tests/: test_architecture.py  test_demo.py  test_smoke.py
